Initial AsyncFIFO TB + misc: - a couple of classes for Interfaces + Drivers and receivers - some "logic" signals moved to wires for declaration + assignment - simple test (not automated verification), passes visually - added gtkwave format - makefile added test + specified iverilog Verilog version + parameter values of the dut

--- a/sim/async_fifo_tb/Makefile
+++ b/sim/async_fifo_tb/Makefile
@@ -5,7 +5,7 @@
 SRC_PATH=$(shell git rev-parse --show-toplevel)/src/
 VERILOG_SOURCES:=$(shell find $(SRC_PATH) | grep .sv)
 
-COCOTB_REDUCED_LOG_FMT = False
+COCOTB_REDUCED_LOG_FMT = FALSE
 SIM ?= icarus
 
 MODULE := test
@@ -14,7 +14,19 @@ TOPLEVEL_LANG=verilog
 COCOTB_HDL_TIMEUNIT=1us
 COCOTB_HDL_TIMEPRECISION=1us
 
-# test:
-# 	@echo $(VERILOG_SOURCES)
+DATA_WIDTH         ?= 8 # FIFO_WORD_WIDTH
+BUFFER_DEPTH_POWER ?= 2 # fifo_size = 2**BUFFER_DEPTH_POWER
+VSIM_ARGS= -P $(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
+VSIM_ARGS+=-P $(TOPLEVEL).BUFFER_DEPTH_POWER=$(BUFFER_DEPTH_POWER)
+VSIM_ARGS+= -g2012
+
+all: test
+
+test:
+	@echo $(VERILOG_SOURCES)
+	@echo $(VSIM_ARGS)
+	@echo " "
+	@echo " Starting SIMULATION on $(shell date)"
+	@echo " "
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
