Improved CustomClk + simple full -> empty test: - CustomClk class with init_phase making a bigger impact on the starting clk value - less init_phases in the test factory - fixed Makefile DUT param passing

--- a/sim/async_fifo_tb/Makefile
+++ b/sim/async_fifo_tb/Makefile
@@ -14,10 +14,10 @@ TOPLEVEL_LANG=verilog
 COCOTB_HDL_TIMEUNIT=1ns
 COCOTB_HDL_TIMEPRECISION=1ps
 
-DATA_WIDTH         ?= 8 # FIFO_WORD_WIDTH
-BUFFER_DEPTH_POWER ?= 2 # fifo_size = 2**BUFFER_DEPTH_POWER
-VSIM_ARGS= -P $(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
-VSIM_ARGS+=-P $(TOPLEVEL).BUFFER_DEPTH_POWER=$(BUFFER_DEPTH_POWER)
+export DATA_WIDTH         ?= 8 # FIFO_WORD_WIDTH
+export BUFFER_DEPTH_POWER ?= 2 # fifo_size = 2**BUFFER_DEPTH_POWER
+COMPILE_ARGS = -P $(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
+COMPILE_ARGS +=-P $(TOPLEVEL).BUFFER_DEPTH_POWER=$(BUFFER_DEPTH_POWER)
 VSIM_ARGS+= -g2012
 
 all: test
@@ -25,6 +25,7 @@ all: test
 test:
 	@echo $(VERILOG_SOURCES)
 	@echo $(VSIM_ARGS)
+	@echo $(BUFFER_DEPTH_POWER)
 	@echo " "
 	@echo " Starting SIMULATION on $(shell date)"
 	@echo " "
