Added 2deep asyncFIFO tb (using NDeep tb): - slight formatting - rename of .gtkw file

--- a/sim/async_fifo_tb/Makefile
+++ b/sim/async_fifo_tb/Makefile
@@ -9,23 +9,31 @@ COCOTB_REDUCED_LOG_FMT = FALSE
 SIM ?= icarus
 
 MODULE := test
-TOPLEVEL=async_fifo_Ndeep
+
 TOPLEVEL_LANG=verilog
 COCOTB_HDL_TIMEUNIT=1ns
 COCOTB_HDL_TIMEPRECISION=1ps
 
 export DATA_WIDTH         ?= 8 # FIFO_WORD_WIDTH
 export BUFFER_DEPTH_POWER ?= 2 # fifo_size = 2**BUFFER_DEPTH_POWER
-COMPILE_ARGS = -P $(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
-COMPILE_ARGS +=-P $(TOPLEVEL).BUFFER_DEPTH_POWER=$(BUFFER_DEPTH_POWER)
 VSIM_ARGS+= -g2012
 
-all: test
+deep2 ?= nok
+ifneq ($deep2, nok)
+	COMPILE_ARGS = -P $(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
+	TOPLEVEL=async_fifo_2deep
+else
+	COMPILE_ARGS = -P $(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
+	COMPILE_ARGS +=-P $(TOPLEVEL).BUFFER_DEPTH_POWER=$(BUFFER_DEPTH_POWER)
+	TOPLEVEL=async_fifo_Ndeep
+endif
 
-test:
+all: prompt
+
+prompt:
 	@echo $(VERILOG_SOURCES)
 	@echo $(VSIM_ARGS)
-	@echo $(BUFFER_DEPTH_POWER)
+	@echo "BUFF_DEPTH_POWER=$(BUFFER_DEPTH_POWER)"
 	@echo " "
 	@echo " Starting SIMULATION on $(shell date)"
 	@echo " "
