Add async fifo post synth tests: - cmos_cells.v genereated for osu18 - SYNTH makefile var that if set to 1 uses the post_synth netlist - FULL test number of inputs based on - small removals - specified dut as of HierarchyObject class type - formatting

--- a/sim/async_fifo_tb/Makefile
+++ b/sim/async_fifo_tb/Makefile
@@ -3,13 +3,14 @@
 # (VERILOG_SOURCES are all files that are inside src/)
 
 SRC_PATH=$(shell git rev-parse --show-toplevel)/src/
+SYN_PATH=$(shell git rev-parse --show-toplevel)/syn/
 VERILOG_SOURCES:=$(shell find $(SRC_PATH) | grep .sv)
 
 COCOTB_REDUCED_LOG_FMT = FALSE
 SIM ?= icarus
 
+SYNTH ?= 0
 MODULE := test
-
 TOPLEVEL_LANG=verilog
 COCOTB_HDL_TIMEUNIT=1ns
 COCOTB_HDL_TIMEPRECISION=1ps
@@ -18,14 +19,19 @@ export DATA_WIDTH         ?= 8 # FIFO_WORD_WIDTH
 export BUFFER_DEPTH_POWER ?= 2 # fifo_size = 2**BUFFER_DEPTH_POWER
 VSIM_ARGS+= -g2012
 
-deep2 ?= nok
-ifneq ($deep2, nok)
-	COMPILE_ARGS = -P $(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
+export deep2 ?= nok
+ifneq ($(deep2), nok)
 	TOPLEVEL=async_fifo_2deep
+	COMPILE_ARGS = -P $(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
 else
+	TOPLEVEL=async_fifo_Ndeep
 	COMPILE_ARGS = -P $(TOPLEVEL).DATA_WIDTH=$(DATA_WIDTH)
 	COMPILE_ARGS +=-P $(TOPLEVEL).BUFFER_DEPTH_POWER=$(BUFFER_DEPTH_POWER)
-	TOPLEVEL=async_fifo_Ndeep
+endif
+
+ifeq ($(SYNTH), 1)
+  VERILOG_SOURCES = $(SYN_PATH)/cmos_cells.v
+  VERILOG_SOURCES += $(SYN_PATH)/$(TOPLEVEL)-netlist.sv
 endif
 
 all: prompt
