--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ jobs:
     - uses: actions/checkout@master
     - uses: chipsalliance/verible-linter-action@main
       with:
-        github_token: ${{ secrets.REVIEWDOG_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
