--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,5 @@ jobs:
     - uses: actions/checkout@master
     - uses: chipsalliance/verible-linter-action@main
       with:
-<<<<<<< HEAD
         github_token: ${{ secrets.GITHUB_TOKEN }}
-=======
-        github_token: ${{ secrets.GITHUB_TOKEN }}
->>>>>>> 5890f29 (ff)
+        config_file: .github/verible_rules/lint_rules.txt
