Add Verible Lint rules + fixed lint errors in files (#2)
* Add Verible Lint rules + fixed lint errors in files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,4 @@ jobs:
     - uses: chipsalliance/verible-linter-action@main
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        config_file: .github/verible_rules/lint_rules.txt
