double .yml file & lint only on changes in *.sv and *v files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-name: Main
+name: main
 on: pull_request
 jobs:
-  lint:
+  hi:
     runs-on: ubuntu-latest
     steps:
-    - uses: AdDraw/verible-linter-action@main
+      run: echo "Hi"
