Lint action in a separate repository(#3)
* try with lint stored in a separate repository

* lint in forked repo

* double .yml file & lint only on changes in *.sv and *v files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,8 @@
-name: Verible linter example
-on:
-  pull_request:
+name: main
+on: pull_request
 jobs:
-  lint:
+  hi:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: chipsalliance/verible-linter-action@main
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        config_file: .github/verible_rules/lint_rules.txt
+    - name: "Saying Hi"
+      run: echo "Hi"
