--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,4 +8,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@master
     - uses: AdDraw/verible-linter-action@main
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
