--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,5 @@ jobs:
       run: echo "Hi"
   actionlint:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: reviewdog/action-actionlint@v1
-        with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+    - name: actionlint with reviewdog
+      uses: reviewdog/action-actionlint@v1.36.0
