--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,6 @@ jobs:
       run: echo "Hi"
   actionlint:
     runs-on: ubuntu-latest
+    steps:
     - name: actionlint with reviewdog
       uses: reviewdog/action-actionlint@v1.36.0
