--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,5 @@ jobs:
     steps:
     - name: actionlint with reviewdog
       uses: reviewdog/action-actionlint@v1.36.0
+      with:
+      github_token: ${{ secrets.GITHUB_TOKEN }}
