--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,7 @@ jobs:
   actionlint:
     runs-on: ubuntu-latest
     steps:
-    - name: actionlint with reviewdog
-      uses: actions/checkout@v3
-      uses: reviewdog/action-actionlint@v1.36.0
+    - uses: actions/checkout@v3
+    - uses: reviewdog/action-actionlint@v1.36.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
