--- a/.github/workflows/lint copy 2.yml
+++ b/.github/workflows/lint copy 2.yml
@@ -15,6 +15,6 @@ jobs:
     - name: Archive production artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: logs
+        name: line50-logs
         path: |
           ./**/*.log
