--- a/.github/workflows/lint copy.yml
+++ b/.github/workflows/lint copy.yml
@@ -1,4 +1,4 @@
-name: CHIPSALLIANCE:Lint Verilog/SysVerilog
+name: CHIPSALLIANCE:PR-CHECK:Lint Verilog/SysVerilog
 on:
   pull_request:
     paths:
@@ -13,3 +13,9 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reviewdog_reporter: github-pr-check
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: pr-check-logs
+        path: |
+          ./**/*.log
