--- a/.github/workflows/lint copy 2.yml
+++ b/.github/workflows/lint copy 2.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: AdDraw/verible-linter-action@line_50_test
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        reviewdog_reporter: github-pr-check
     - name: Archive production artifacts
       uses: actions/upload-artifact@v3
       with:
